# Lab_3_OS

./: README.md
OS_LAB_3/: CMakeLists.txt  CMakePresets.json  Main.cpp  mathfunctions.cpp  mathfunctions.h  tests.cpp  threadfunctions.cpp  threadfunctions.h
